fixed footer extra spacing below not spanning

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -16,6 +16,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*{
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
